--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "expo-haptics": "~15.0.8",
     "expo-image": "~3.0.11",
     "expo-image-picker": "~17.0.10",
+    "expo-linear-gradient": "~15.0.8",
     "expo-linking": "~8.0.11",
+    "expo-notifications": "^0.32.16",
     "expo-router": "~6.0.21",
     "expo-sharing": "^14.0.8",
     "expo-splash-screen": "~31.0.13",
