--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo": "~54.0.30",
     "expo-calendar": "~15.0.8",
     "expo-constants": "~18.0.12",
+    "expo-crypto": "^15.0.8",
     "expo-file-system": "^19.0.21",
     "expo-font": "~14.0.10",
     "expo-haptics": "~15.0.8",
