--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-linking": "~8.0.11",
     "expo-notifications": "^0.32.16",
     "expo-router": "~6.0.21",
+    "expo-screen-orientation": "~9.0.8",
     "expo-sharing": "^14.0.8",
     "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
